Fix focus state of the search bar in dark mode

--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -40,6 +40,8 @@
   }
 
   &.ui.input > input:focus {
+    background-color: #1f1f1f;
+    color: white;
     @include focus-search-bar-styles;
   }
 
